# tauri-app-vanilla

./: .dockerignore  Dockerfile  README.md
docs/: todo.txt  worklog.txt
src/: index.html  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/docs/: worklog.txt
src-tauri/src/: main.rs
