[package]
name = "tauri-app-vanilla"
version = "0.0.0"
description = "A Tauri App"
authors = ["Dmitri Afanasjev <adimas@gmail.com>"]
license = ""
repository = "https://github.com/afanasjev82/tauri-app-vanilla"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["api-all", "cli", "windows7-compat"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
